[package]
name = "trojan-s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"]}
tokio-rustls = "0.23.4"
toml = "0.7.2"

[profile.release]
opt-level = 3
